<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_options"
        android:title="@string/options"
        android:icon="@drawable/toggle_foreground"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/themetoggle"
                android:title="@string/toggle_mode"
                android:icon="@drawable/toggle_foreground"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/action_sensors"
                android:title="@string/sensors"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_notification"
                android:title="@string/notification"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>