<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="188dp"
        android:layout_height="152dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="119dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image" />

    <EditText
        android:id="@+id/username"
        android:layout_width="418dp"
        android:layout_height="76dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="496dp"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="398dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="596dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="213dp"
        android:layout_marginTop="664dp"
        android:text="@string/or"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="418dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="424dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/googlebutton"
        android:layout_width="398dp"
        android:layout_height="54dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="704dp"
        android:text="@string/sign_in_with_google"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/donthaveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="782dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="820dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>